# Shtos

./: .gitignore  CMakeLists.txt  DemoApplication  Makefile  README.md  main.cpp
Demo/: DemoApplication.cpp  DemoLayer.cpp  DemoLayer.h  DemoLayer2.cpp  DemoLayer2.h  DemoLayer3.cpp  DemoLayer3.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
SDL/lib/win32/: SDL2.lib  SDL2main.lib
SDL/lib/win64/: SDL2.lib  SDL2main.lib
Shtos/Application/: Application.cpp  Application.h  EntryPoint.h
Shtos/AssetManager/: AssetManager.cpp  AssetManager.h
Shtos/EventHandler/: EventHandler.cpp  EventHandler.h
Shtos/Layer/: Layer.cpp  Layer.h
Shtos/LayerStack/: LayerStack.cpp  LayerStack.h
Shtos/Logger/: Logger.h
Shtos/Renderer/: Renderer.cpp  Renderer.h
