cmake_minimum_required(VERSION 3.13)
project(Shtos_master)

set(CMAKE_CXX_STANDARD 14)

include_directories(Demo)
include_directories(SDL)
include_directories(SDL/include)
include_directories(SDL/include/SDL2)
include_directories(Shtos/Application)
include_directories(Shtos/AssetManager)
include_directories(Shtos/Layer)
include_directories(Shtos/LayerStack)
include_directories(Shtos/Logger)
include_directories(Shtos/Renderer)

add_executable(Shtos_master
        Demo/assets/love_from_spain.jpg
        Demo/assets/wpww.png
        Demo/DemoApplication.cpp
        Demo/DemoLayer.cpp
        Demo/DemoLayer.h
        Demo/DemoLayer2.cpp
        Demo/DemoLayer2.h
        SDL/include/SDL2/begin_code.h
        SDL/include/SDL2/close_code.h
        SDL/include/SDL2/SDL.h
        SDL/include/SDL2/SDL_assert.h
        SDL/include/SDL2/SDL_atomic.h
        SDL/include/SDL2/SDL_audio.h
        SDL/include/SDL2/SDL_bits.h
        SDL/include/SDL2/SDL_blendmode.h
        SDL/include/SDL2/SDL_clipboard.h
        SDL/include/SDL2/SDL_config.h
        SDL/include/SDL2/SDL_config_android.h
        SDL/include/SDL2/SDL_config_iphoneos.h
        SDL/include/SDL2/SDL_config_macosx.h
        SDL/include/SDL2/SDL_config_minimal.h
        SDL/include/SDL2/SDL_config_os2.h
        SDL/include/SDL2/SDL_config_pandora.h
        SDL/include/SDL2/SDL_config_psp.h
        SDL/include/SDL2/SDL_config_windows.h
        SDL/include/SDL2/SDL_config_winrt.h
        SDL/include/SDL2/SDL_config_wiz.h
        SDL/include/SDL2/SDL_copying.h
        SDL/include/SDL2/SDL_cpuinfo.h
        SDL/include/SDL2/SDL_egl.h
        SDL/include/SDL2/SDL_endian.h
        SDL/include/SDL2/SDL_error.h
        SDL/include/SDL2/SDL_events.h
        SDL/include/SDL2/SDL_filesystem.h
        SDL/include/SDL2/SDL_gamecontroller.h
        SDL/include/SDL2/SDL_gesture.h
        SDL/include/SDL2/SDL_haptic.h
        SDL/include/SDL2/SDL_hints.h
        SDL/include/SDL2/SDL_image.h
        SDL/include/SDL2/SDL_joystick.h
        SDL/include/SDL2/SDL_keyboard.h
        SDL/include/SDL2/SDL_keycode.h
        SDL/include/SDL2/SDL_loadso.h
        SDL/include/SDL2/SDL_log.h
        SDL/include/SDL2/SDL_main.h
        SDL/include/SDL2/SDL_messagebox.h
        SDL/include/SDL2/SDL_metal.h
        SDL/include/SDL2/SDL_mouse.h
        SDL/include/SDL2/SDL_mutex.h
        SDL/include/SDL2/SDL_name.h
        SDL/include/SDL2/SDL_opengl.h
        SDL/include/SDL2/SDL_opengl_glext.h
        SDL/include/SDL2/SDL_opengles.h
        SDL/include/SDL2/SDL_opengles2.h
        SDL/include/SDL2/SDL_opengles2_gl2.h
        SDL/include/SDL2/SDL_opengles2_gl2ext.h
        SDL/include/SDL2/SDL_opengles2_gl2platform.h
        SDL/include/SDL2/SDL_opengles2_khrplatform.h
        SDL/include/SDL2/SDL_pixels.h
        SDL/include/SDL2/SDL_platform.h
        SDL/include/SDL2/SDL_power.h
        SDL/include/SDL2/SDL_quit.h
        SDL/include/SDL2/SDL_rect.h
        SDL/include/SDL2/SDL_render.h
        SDL/include/SDL2/SDL_revision.h
        SDL/include/SDL2/SDL_rwops.h
        SDL/include/SDL2/SDL_scancode.h
        SDL/include/SDL2/SDL_sensor.h
        SDL/include/SDL2/SDL_shape.h
        SDL/include/SDL2/SDL_stdinc.h
        SDL/include/SDL2/SDL_surface.h
        SDL/include/SDL2/SDL_system.h
        SDL/include/SDL2/SDL_syswm.h
        SDL/include/SDL2/SDL_test.h
        SDL/include/SDL2/SDL_test_assert.h
        SDL/include/SDL2/SDL_test_common.h
        SDL/include/SDL2/SDL_test_compare.h
        SDL/include/SDL2/SDL_test_crc32.h
        SDL/include/SDL2/SDL_test_font.h
        SDL/include/SDL2/SDL_test_fuzzer.h
        SDL/include/SDL2/SDL_test_harness.h
        SDL/include/SDL2/SDL_test_images.h
        SDL/include/SDL2/SDL_test_log.h
        SDL/include/SDL2/SDL_test_md5.h
        SDL/include/SDL2/SDL_test_memory.h
        SDL/include/SDL2/SDL_test_random.h
        SDL/include/SDL2/SDL_thread.h
        SDL/include/SDL2/SDL_timer.h
        SDL/include/SDL2/SDL_touch.h
        SDL/include/SDL2/SDL_types.h
        SDL/include/SDL2/SDL_version.h
        SDL/include/SDL2/SDL_video.h
        SDL/include/SDL2/SDL_vulkan.h
        SDL/lib/win32/SDL2.dll
        SDL/lib/win32/SDL2.lib
        SDL/lib/win32/SDL2main.lib
        SDL/lib/win64/libjpeg-9.dll
        SDL/lib/win64/libpng16-16.dll
        SDL/lib/win64/SDL2.dll
        SDL/lib/win64/SDL2.lib
        SDL/lib/win64/SDL2_image.dll
        SDL/lib/win64/SDL2main.lib
        SDL/lib/win64/zlib1.dll
        Shtos/Application/Application.cpp
        Shtos/Application/Application.h
        Shtos/Application/EntryPoint.h
        Shtos/AssetManager/AssetManager.cpp
        Shtos/AssetManager/AssetManager.h
        Shtos/Layer/Layer.cpp
        Shtos/Layer/Layer.h
        Shtos/LayerStack/LayerStack.cpp
        Shtos/LayerStack/LayerStack.h
        Shtos/Logger/Logger.h
        Shtos/Renderer/Renderer.cpp
        Shtos/Renderer/Renderer.h)
